# poetry2nix-pillow

./: pyproject.toml  test.py
