[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["Tikhon Jelvis <tikhon@jelv.is>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Pillow = "^9.5.0"

[tool.poetry.scripts]
test = "test:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
